[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/energy_system/BatteryR.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/backgrounds/console_left.png" type="Texture" id=2]
[ext_resource path="res://objects/energy_system/BatteryL.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/energy_system/Component.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/energy_system/EnergySystem.gd" type="Script" id=5]
[ext_resource path="res://sprites/back.png" type="Texture" id=6]
[ext_resource path="res://sound/computer_select4.ogg" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="EnergySystem" type="Control"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteriesL" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 14.0
margin_right = 64.0
margin_bottom = 84.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteryL1" parent="BatteriesL" instance=ExtResource( 3 )]
margin_right = 64.0
margin_bottom = 28.0

[node name="BatteryL2" parent="BatteriesL" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 64.0

[node name="BatteryL3" parent="BatteriesL" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 100.0

[node name="BatteryL4" parent="BatteriesL" instance=ExtResource( 3 )]
margin_top = 108.0
margin_right = 64.0
margin_bottom = 136.0

[node name="BatteriesR" type="VBoxContainer" parent="."]
margin_left = 224.0
margin_top = 14.0
margin_right = 256.0
margin_bottom = 84.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteryR1" parent="BatteriesR" instance=ExtResource( 1 )]
margin_right = 64.0
margin_bottom = 28.0

[node name="BatteryR2" parent="BatteriesR" instance=ExtResource( 1 )]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 64.0

[node name="BatteryR3" parent="BatteriesR" instance=ExtResource( 1 )]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 100.0

[node name="BatteryR4" parent="BatteriesR" instance=ExtResource( 1 )]
margin_top = 108.0
margin_right = 64.0
margin_bottom = 136.0

[node name="Components" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 28.0
margin_right = 160.0
margin_bottom = 84.0
rect_min_size = Vector2( 32, 48 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Component1" parent="Components" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 32.0

[node name="Component2" parent="Components" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 64.0
margin_bottom = 68.0
which_component = 1

[node name="Component3" parent="Components" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 64.0
margin_bottom = 104.0
which_component = 2

[node name="Button_Back" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 162.0
margin_right = 18.0
margin_bottom = 178.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Connected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "UI"
[connection signal="pressed" from="Button_Back" to="." method="_on_Button_Back_pressed"]
